Bug 1389908 - Make sure the NSColorPanel never has a dangling target, and make sure to set the new target before calling setColor. r=spohl

MozReview-Commit-ID: L71yb593eR2